<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_community"
            android:icon="@drawable/ic_baseline_people_24"
            android:title="@string/community" />
        <item
            android:id="@+id/nav_food"
            android:icon="@drawable/ic_baseline_food_24"
            android:title="@string/food" />
        <item
            android:id="@+id/nav_health"
            android:icon="@drawable/ic_baseline_health_24"
            android:title="@string/health" />
        <item
            android:id="@+id/nav_housing"
            android:icon="@drawable/ic_baseline_house_24"
            android:title="@string/housing" />
        <item
            android:id="@+id/nav_govt"
            android:icon="@drawable/ic_baseline_govt_24"
            android:title="@string/government_services" />
        <item
            android:id="@+id/nav_signed_out"
            android:icon="@drawable/ic_baseline_signout_24"
            android:title="@string/sign_out" />
    </group>
</menu>