<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context=".food.ByCountryActivityMain">
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_menu" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/by_country"
            android:textColor="@color/red_500"
            android:textSize="48sp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/title_text"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="25dp"
                android:orientation="vertical"
                android:layout_marginVertical="10dp"
                android:paddingBottom="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <Button
                    android:id="@+id/btnBrazilian"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/brazilian"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/btnBangladeshi"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/bangladeshi"
                    android:padding="4dp"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/btnChinese"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/chinese"
                    android:padding="4dp"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/btnIndian"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/indian"
                    android:padding="4dp"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/btnJamaican"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/jamaican"
                    android:padding="4dp"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/btnJapanese"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/japanese"
                    android:padding="4dp"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/btnRussian"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/russian"
                    android:padding="4dp"
                    android:textAllCaps="false" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</RelativeLayout>